# Berlin_Battery_Hack

./: README.md  checklist.md  main.py  pyproject.toml
data/processed/: project_A.parquet
data/raw/: overview.xlsx  project_A.xlsx
outputs/metrics/: easy_mode_metrics.json  hard_mode_comparison.json  phase1_data_quality.json  phase4_comprehensive_metrics.csv  phase6_battery_comparison.csv
outputs/reconstructions/: easy_mode_reconstruction.csv  hard_mode_rule_based.csv  hard_mode_xgboost.csv
outputs/reports/: phase6_battery_report.md
reports/: Final_Project_Report_Project_A.md  phase4_validation_report.md
src/: battery_sim.py  battery_soc_visualizations.py  data_loader.py  easy_mode.py  hard_mode.py  metrics.py  visualization.py
