[project]
name = "hackathon-deliverable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2026.3.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tabulate>=0.10.0",
    "xgboost>=3.2.0",
]
